# agent-demos

./: .gitignore  A365_PUBLISH_REPORT_HERMES.md  AGENTS.md  AGENTS_PLAN.md  HERMES_PLAN.md  HERMES_RESEARCH.md  README.md
agent-365-mcp/agent/publish/: README.md  a365.generated.config.json  app.py  oryx-manifest.toml  pyproject.toml  requirements.txt
autopilots-on-azure/: .dockerignore  .gitignore  ARCHITECTURE.md  AUTOPILOTS_SPEC.md  DEMO.md  DEPLOYMENT.md  HERMES_OPTION_PLAN.md  OPENCLAW_OPTION_PATH.md  PLAN.md  README.md  SPEC.md  pyproject.toml
autopilots-on-azure/agent365/: ToolingManifest.json
autopilots-on-azure/autopilots_identity/: __init__.py  mcp_proxy.py  tokens.py
autopilots-on-azure/blueprints/junior-project-manager/: .gitignore  SOUL.md  collective-learning-review.json  config.yaml  distribution.yaml
autopilots-on-azure/bridge/: Dockerfile  __init__.py  app.py  gateway_client.py  generate_device_identity.py  proactive_delivery.py  requirements.txt  scheduled_learning.py  scheduler_auth.py  servicebus_scheduler.py
autopilots-on-azure/bridge/runtime/: __init__.py  base.py  factory.py  hermes.py  openclaw.py
autopilots-on-azure/docs/: hermes-architecture-deep-dive.html  hermes-learning-deep-dive.html  hermes-learning-guide.html  hermes-on-azure-overview.html
autopilots-on-azure/docs/adr/: 0001-standard-aca-bridge.md  (+14 more)
autopilots-on-azure/private-incidents-mcp/: .dockerignore  Dockerfile
autopilots-on-azure/public-shipments-mcp/: Dockerfile  pyproject.toml
autopilots-on-azure/scripts/: __init__.py  build_images.py  collective_learning.py  collective_review.py  demo_cohort.py  demo_ops.py  deploy_apps_runtime.py  package_teams_app.py  prepare_control_ui.py  provision_agent365_instance.py  register_a7_byo_mcp.py  register_byo_mcp.py  sandbox_run_runtime.py  sandbox_runtime.py  scheduled_learning_job.py  servicebus_dream_smoke.py  setup_a7_identity.py  setup_agent365.py  setup_app_tfvars.py  setup_identity.py  setup_scheduled_learning_identity.py  setup_teams_tfvars.py  snapshot_system.py  tf_helpers.py  user_schedule_smoke.py
autopilots-on-azure/teams/: manifest.template.json
autopilots-on-azure/tests/: smoke_foundry_proxy.py  test_a7_setup.py  test_agent365_setup.py  test_agent_identity_tokens.py  test_collective_learning.py  test_collective_review.py  test_demo_cohort.py  test_demo_ops.py  test_deploy_apps_runtime.py  test_hermes_runtime.py  test_identity_mcp_proxy.py  test_identity_setup.py  test_provision_agent365_instance.py  test_runtime_adapters.py  test_scheduled_learning.py  test_scheduled_learning_identity.py  test_scheduled_learning_job.py  test_scheduler_auth.py  test_setup_app_tfvars.py  test_snapshot_system.py  test_teams_bridge.py  test_user_scheduling.py
autopilots-on-azure/tools/: preflight.py
empty-demo/empty-agent/: .env.example  README.md  app.py  generate_app_package.ps1  preauth.json  pyproject.toml
empty-demo/empty-api/: .env.example  README.md  app.py  pyproject.toml
foundry-showcase/bff/: Dockerfile  app.py  pyproject.toml  smoke_agui.py
foundry-showcase/case-mcp/: .dockerignore  Dockerfile  pyproject.toml
foundry-showcase/experiences/: configure_foundry_iq.py  configure_monitoring.py  generate_knowledge_assets.py  pyproject.toml  rerun_trace_data_generation.py  run_local_red_team.py  run_qwen_finetuning.py  seed_foundry_memory.py  seed_stored_completions.py  validate_guardrail.py
foundry-showcase/main-agent/: Dockerfile  README.md  agent.manifest.yaml  agent.yaml  case_workflow.py  eval.yaml  invoice_workflow.py  main.py  pyproject.toml  requirements.txt  smoke-invocation.json  smoke_a2a_delegation.py  smoke_foundry_memory.py  smoke_invocations.py  smoke_skills.py  smoke_test.py  smoke_toolbox.py  smoke_workflow.py
foundry-showcase/policy-helper/: main.py  pyproject.toml  requirements.txt  smoke_a2a.py
openclaw-on-azure/: HANDOFF_aca-express-teams-agent365.md  HERMES_OPTION_PLAN.md  OPENCLAW_OPTION_PATH.md  README.md  pyproject.toml
openclaw-on-azure/bridge/: Dockerfile  __init__.py  app.py  gateway_client.py  requirements.txt
openclaw-on-azure/image/: requirements.txt
openclaw-on-azure/private-incidents-mcp/: pyproject.toml
openclaw-on-azure/scripts/: __init__.py  build_images.py  package_teams_app.py  prepare_control_ui.py  sandbox_gateway.py  sandbox_run_gateway.py  setup_agent365.py  setup_bridge_tfvars.py  setup_teams_tfvars.py
openclaw-on-azure/teams/: manifest.template.json
openclaw-on-azure/tests/: test_agent365_setup.py  test_teams_bridge.py
progressive-agents/01-foundry-responses-baseline/: README.md  agent.manifest.yaml  agent.yaml  azure.yaml  main.py  pyproject.toml  requirements.txt
progressive-agents/02-foundry-invocations-baseline/: README.md  agent.manifest.yaml  agent.yaml  azure.yaml  main.py  pyproject.toml
progressive-agents/03-a2a-enabled-responses-agent/: README.md  agent.manifest.yaml  agent.yaml  azure.yaml  main.py  pyproject.toml
progressive-agents/04-ag-ui-local-adapter/: .agentignore  README.md  agent.manifest.yaml  agent.yaml  agui_client.py  azure.yaml  main.py  pyproject.toml  requirements.txt  smoke_agui.py  tui.py
progressive-agents/05-ag-ui-authenticated-gateway/: .dockerignore  .gitignore  README.md  agent.manifest.yaml  agent.yaml  agui_client.py  azure.yaml  bff.py  main.py  pyproject.toml  requirements.txt  smoke_a2a.py  smoke_invocations.py  tui.py  web_server.py
progressive-agents/05-ag-ui-through-invocations/: README.md  agent.manifest.yaml  agent.yaml  agui_client.py  azure.yaml  main.py  pyproject.toml  requirements.txt  smoke_agui.py  tui.py  web_server.py
progressive-agents/06-foundry-observability-evals/: .agentignore  .dockerignore  .gitignore  README.md  agent.manifest.yaml  agent.yaml  agui_client.py  azure.yaml  bff.py  eval.yaml  main.py  pyproject.toml  requirements.txt  tui.py
progressive-agents/07-foundry-memory-profile/: Dockerfile  README.md  agent.manifest.yaml  agent.yaml  azure.yaml  bff.py  eval.yaml  main.py  pyproject.toml  smoke_agui.py  smoke_foundry_memory.py  smoke_test.py  tui.py  web_server.py
(+260 files in other folders)
