[project]
name = "autopilots-on-azure"
version = "0.1.0"
description = "Runtime-neutral autopilot hosting on Azure Container Apps Sandboxes."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-containerapps-sandbox==0.1.0b3",
    "azure-identity>=1.25.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.13",
    "httpx==0.28.1",
    "microsoft-agents-authentication-msal>=1.1.0",
    "microsoft-agents-hosting-fastapi>=1.1.0",
    "PyJWT[crypto]==2.13.0",
    "uvicorn[standard]>=0.34.3",
    "websockets==14.1",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
