[project]
name = "openclaw-on-azure"
version = "0.1.0"
description = "OpenClaw Gateway on Azure Container Apps Sandboxes."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "azure-containerapps-sandbox==0.1.0b3",
    "azure-identity>=1.25.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.13",
    "httpx==0.28.1",
    "microsoft-teams-apps>=2.0.13.4",
    "uvicorn[standard]>=0.34.3",
    "websockets==14.1",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
