[project]
name = "public-shipments-mcp"
version = "0.1.0"
description = "Public shipment tracking MCP server for Agent 365 BYO demonstrations."
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp",
    "PyJWT",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["public_shipments_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
