[project]
name = "foundry-showcase-agui-bff"
version = "0.1.0"
description = "Secretless Entra-authenticated AG-UI gateway for the Foundry Showcase."
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-identity>=1.25.0",
    "azure-monitor-opentelemetry>=1.8.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
