[project]
name = "foundry-showcase-case-mcp"
version = "0.1.0"
description = "Entra-protected support case MCP service for the Foundry Showcase."
requires-python = ">=3.11,<3.14"
dependencies = [
    "azure-data-tables>=12.7.0",
    "azure-identity>=1.25.0",
    "fastmcp>=2.12.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["case_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
