[project]
name = "foundry-showcase-main"
version = "0.1.0"
description = "Microsoft Foundry support-operations showcase main agent."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "agent-framework-core>=1.2.2",
    "agent-framework-foundry>=1.2.2",
    "agent-framework-foundry-hosting",
    "azure-ai-evaluation",
    "azure-ai-projects>=2.3.0",
    "azure-identity>=1.25.0",
    "azure-monitor-opentelemetry",
    "httpx==0.28.1",
    "mcp",
    "opentelemetry-api",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
