[project]
name = "ag-ui-local-adapter"
version = "0.1.0"
description = "Local AG-UI adapter for a Microsoft Agent Framework agent backed by a Foundry model."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "agent-framework-core>=1.2.2",
    "agent-framework-ag-ui",
    "agent-framework-foundry>=1.2.2",
    "agent-framework-foundry-hosting",
    "a2a-sdk==1.0.2",
    "azure-identity>=1.25.0",
    "fastapi",
    "httpx==0.28.1",
    "mcp",
    "textual",
    "uvicorn",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
