[project]
name = "foundry-observability-evals"
version = "0.1.0"
description = "Observable AG-UI gateway and Foundry Hosted Agent with evals."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "agent-framework-core>=1.2.2",
    "agent-framework-foundry>=1.2.2",
    "agent-framework-foundry-hosting",
    "a2a-sdk==1.0.2",
    "azure-ai-evaluation",
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.25.0",
    "azure-monitor-opentelemetry",
    "fastapi",
    "httpx==0.28.1",
    "mcp",
    "opentelemetry-api",
    "pyjwt[crypto]",
    "textual",
    "uvicorn",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
