[project]
name = "agent365-simple-agent"
version = "0.1.0"
description = "Simple Agent 365 agent that echoes user messages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "microsoft-agents-hosting-fastapi>=0.7.0",
    "microsoft-agents-authentication-msal>=0.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
prerelease = "allow"
